[gd_scene load_steps=20 format=1]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://sprites/divider.png" type="Texture" id=2]
[ext_resource path="res://sprites/topEdge.png" type="Texture" id=3]
[ext_resource path="res://goal.gd" type="Script" id=4]
[ext_resource path="res://sprites/yellowGoal.png" type="Texture" id=5]
[ext_resource path="res://sprites/redGoal.png" type="Texture" id=6]
[ext_resource path="res://player.gd" type="Script" id=7]
[ext_resource path="res://sprites/redPlayer.png" type="Texture" id=8]
[ext_resource path="res://sprites/bluePlayer.png" type="Texture" id=9]
[ext_resource path="res://ball.gd" type="Script" id=10]
[ext_resource path="res://sprites/ball.png" type="Texture" id=11]
[ext_resource path="res://InGameUI.gd" type="Script" id=12]
[ext_resource path="res://timeLabel.tres" type="DynamicFont" id=13]
[ext_resource path="res://countdowntimer.tres" type="DynamicFont" id=14]
[ext_resource path="res://p1score.tres" type="DynamicFont" id=15]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 8.7884 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 10, 8.71115 )

[sub_resource type="CircleShape2D" id=3]

custom_solver_bias = 0.0
radius = 10.0

[sub_resource type="CircleShape2D" id=4]

custom_solver_bias = 0.0
radius = 10.0

[node name="Game" type="Node2D"]

script/script = ExtResource( 1 )

[node name="field" type="Node2D" parent="."]

transform/pos = Vector2( 640, 600 )

[node name="divider" type="Sprite" parent="field"]

texture = ExtResource( 2 )

[node name="topEdge" type="Sprite" parent="field"]

transform/pos = Vector2( 0, -416 )
texture = ExtResource( 3 )

[node name="bottomEdge" type="Sprite" parent="field"]

transform/pos = Vector2( 0, 416 )
texture = ExtResource( 3 )

[node name="rightGoal" type="Node2D" parent="field"]

transform/pos = Vector2( 603, 0 )

[node name="yellowGoal" type="Area2D" parent="field/rightGoal"]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 0.57, 0, 0, 15, 32, -276 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 1 )
shapes/1/transform = Matrix32( 0.57, 0, 0, 15, 32, 276 )
shapes/1/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="field/rightGoal/yellowGoal"]

texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="field/rightGoal/yellowGoal"]

transform/pos = Vector2( 32, -276 )
transform/scale = Vector2( 0.57, 15 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="CollisionShape2D1" type="CollisionShape2D" parent="field/rightGoal/yellowGoal"]

transform/pos = Vector2( 32, 276 )
transform/scale = Vector2( 0.57, 15 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 1

[node name="redGoal" type="Area2D" parent="field/rightGoal"]

input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 0.57, 0, 0, 16, 32, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="field/rightGoal/redGoal"]

texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="field/rightGoal/redGoal"]

transform/pos = Vector2( 32, 0 )
transform/scale = Vector2( 0.57, 16 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="leftGoal" type="Node2D" parent="field"]

transform/pos = Vector2( -603, 0 )

[node name="yellowGoal" type="Area2D" parent="field/leftGoal"]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 0.57, 0, 0, 15, -32, -276 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 1 )
shapes/1/transform = Matrix32( 0.57, 0, 0, 15, -32, 276 )
shapes/1/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="field/leftGoal/yellowGoal"]

texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="field/leftGoal/yellowGoal"]

transform/pos = Vector2( -32, -276 )
transform/scale = Vector2( 0.57, 15 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="CollisionShape2D1" type="CollisionShape2D" parent="field/leftGoal/yellowGoal"]

transform/pos = Vector2( -32, 276 )
transform/scale = Vector2( 0.57, 15 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 1

[node name="redGoal" type="Area2D" parent="field/leftGoal"]

input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 0.57, 0, 0, 16, -32, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="field/leftGoal/redGoal"]

texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="field/leftGoal/redGoal"]

transform/pos = Vector2( -32, 0 )
transform/scale = Vector2( 0.57, 16 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="redPlayer" type="Area2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 250, 600 )
input/pickable = true
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 5, 0, 0, 5, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="redPlayer"]

texture = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="redPlayer"]

transform/scale = Vector2( 5, 5 )
shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[node name="bluePlayer" type="Area2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 1000, 600 )
input/pickable = true
shapes/0/shape = SubResource( 4 )
shapes/0/transform = Matrix32( 5, 0, 0, 5, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="bluePlayer"]

texture = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="bluePlayer"]

transform/scale = Vector2( 5, 5 )
shape = SubResource( 4 )
trigger = false
_update_shape_index = 0

[node name="ball" type="Area2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 640, 600 )
input/pickable = true
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 1.75, 0, 0, 1.75, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 10 )

[node name="ballSprite" type="Sprite" parent="ball"]

texture = ExtResource( 11 )

[node name="CollisionShape2D1" type="CollisionShape2D" parent="ball"]

transform/scale = Vector2( 1.75, 1.75 )
shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[node name="InGameUI" type="Panel" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = -1216.0
margin/bottom = -116.0
script/script = ExtResource( 12 )

[node name="timeLabel" type="Label" parent="InGameUI"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 64.0
margin/top = 90.0
margin/right = -64.0
margin/bottom = 11.0
custom_fonts/font = ExtResource( 13 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "TIME"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="countDown" type="Label" parent="InGameUI"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 78.0
margin/top = 50.0
margin/right = -78.0
margin/bottom = -107.0
custom_fonts/font = ExtResource( 14 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "99"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="p1Score" type="Label" parent="InGameUI"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 415.0
margin/top = 110.0
margin/right = 225.0
margin/bottom = -125.0
custom_fonts/font = ExtResource( 15 )
custom_colors/font_color = Color( 1, 0, 0.505882, 1 )
text = "01"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="p2Score" type="Label" parent="InGameUI"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -225.0
margin/top = 115.0
margin/right = -477.0
margin/bottom = -120.0
custom_fonts/font = ExtResource( 15 )
custom_colors/font_color = Color( 0.258824, 0.776471, 1, 1 )
text = "00"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


